<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MealMate</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_passwords_do_not_match">The passwords do not match</string>
    <string name="login_progress_signing_in">Signing in...</string>
    <string name="recipe_image">Recipe image</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="add_to_grocery">Add to Grocery</string>
    <string name="search_recipes">Search recipes...</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="meal_image">Meal image</string>
    <string name="delete">Delete</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="enter_recipe_name">Enter recipe name</string>
    <string name="enter_ingredients">Enter ingredients (one per line)</string>
    <string name="enter_instructions">Enter preparation instructions</string>
    <string name="take_photo">Take Photo</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="from_gallery">Gallery</string>
    <string name="button_background">Button Background</string>
    <string name="delegationa">SEND SMS</string>


    <string name="app_logo">MealMate Logo</string>
    <string name="greeting_text">Hey there, Mate!</string>
    <string name="welcome_message">Welcome to MealMate, your personal assistant for meal planning and grocery shopping. Let us help you save time and eat healthier!</string>
    <string name="features_title">What you can do with MealMate:</string>
    <string name="feature_1">Plan your meals for the entire week</string>
    <string name="feature_2">Generate shopping lists automatically</string>
    <string name="feature_3">Share tasks with family and friends</string>
    <string name="feature_4">Find the best prices at your local stores</string>
    <string name="get_started_prompt">Ready to simplify your meal planning?</string>
    <string name="get_started">Get Started</string>

</resources>